# NexRL

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  README.md  pyproject.toml  pytest.ini
.ai-instructions/code-review/: generic.md
.ai-instructions/developing/: commit-guidelines.md  documentation.md  testing-and-examples.md
.claude/: CLAUDE.md
.claude/agents/code-review/: AGENT.md
.claude/agents/testing/: AGENT.md
.claude/skills/address-pr-comments/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/fix-issue/: SKILL.md
.claude/skills/git-commit/: SKILL.md
.claude/skills/github-pr/: SKILL.md
.claude/skills/testing/: SKILL.md
.cursor/commands/: need_proxy.md  nexrl_env.md  test_nexrl.md
.github/workflows/: ci.yml
cli/: README.md  __init__.py  admin_setup.py  init.py  launch.py  main.py  run.py  setup_env.sh
cli/common/: __init__.py  config_utils.py  debug_utils.py  ray_setup.sh  run_nexrl.sh
cli/self_hosted/: config_utils.py  run.py  run_api_server.sh  run_gpu_worker.sh  yaml_builder.py
cli/self_hosted/templates/: api_server_job.yaml.jinja  driver_job.yaml.jinja  gpu_worker_job.yaml.jinja  inference_deployment.yaml.jinja  rollout_router_deployment.yaml.jinja
cli/setup/: 01-namespace.yaml  02-admin-config.yaml  03-user-config-template.yaml  04-volcano-queue.yaml  05-redis-secret-template.yaml  06-sglang-router-rbac.yaml  07-rollout-router.yaml  08-routers-configmap.yaml  09-nexrl-job-rbac.yaml  README.md
cli/templates/: __init__.py  admin_configmap.yaml.jinja  nexrl_controller_volcanojob.yaml.jinja  redis_secret.yaml.jinja  rollout_router_deployment.yaml.jinja  rollout_router_service.yaml.jinja  rollout_workers.yaml.jinja  routers_configmap.yaml.jinja  sglang_router_rbac.yaml.jinja  train_router_deployment.yaml.jinja  train_router_service.yaml.jinja  volcano_queue.yaml.jinja  wandb_secret.yaml.jinja  worker_volcanojob.yaml.jinja
cli/tests/: README.md  __init__.py  test_k8s_utils.py  test_validation.py  test_yaml_builder.py
cli/training_service/: config_utils.py  run.py  yaml_builder.py
cli/training_service/templates/: driver_job.yaml.jinja
cli/utils/: __init__.py  config_manager.py  k8s_utils.py  validation.py  yaml_builder.py
docker/: Dockerfile
docs/: README-CN.md  debug_data_dump_usage.md  developer-guide.md  user-guide.md
docs/developer-guide/: README.md
docs/developer-guide/01-getting-started/: configuration-setup.md  deployment-modes.md  quick-start.md
docs/developer-guide/02-core-architecture/: activity-tracking.md  controller.md  data-types.md  overview.md
docs/developer-guide/03-data-loader/: data-loader.md
docs/developer-guide/04-trajectory-pool/: trajectory-pool.md
docs/developer-guide/05-rollout-workers/: base-rollout-worker.md  custom-workers.md  evaluators.md  nexau-rollout-worker.md  overview.md
docs/developer-guide/06-trainers/: custom-trainers.md  overview.md  remote-api-trainers.md  self-hosted-trainers.md
docs/developer-guide/07-services/: inference-service.md  service-holders.md  training-service.md
examples/single_turn_math/: rl_train.yaml
nexrl/: __init__.py  activity_tracker.py  base_module.py  controller.py  error_reporter.py  executor.py  llm_service_client.py  main.py  nexrl_types.py  ray_resource_manager.py  train_batch_pool.py  train_service_client.py  train_worker.py  trajectory_pool.py  validator.py
nexrl/agent/: __init__.py  base_agent.py  single_turn_math.py
nexrl/algorithm/: __init__.py  core_algos.py
nexrl/algorithm_processor/: __init__.py  base_algorithm_processor.py  core_algos.py  grpo_processor.py
nexrl/config/: rl_train.yaml
nexrl/data_loader/: __init__.py  data_loader.py  torch_data_loader.py
nexrl/inference_service_client/: __init__.py  base_inference_service_client.py  openai_inference_service_client.py  remote_api_inference_service_client.py
nexrl/mock/: __init__.py  mock_algorithm_processor.py  mock_data_loader.py  mock_inference_service_client.py  mock_llm_service_client.py  mock_rollout_worker.py  mock_train_service_client.py
nexrl/rollout_worker/: __init__.py  agent_rollout_worker.py  base_nexau_rollout_worker.py  base_rollout_worker.py  pig_latin_rollout_worker.py  simple_rollout_worker.py  single_turn_math.py
nexrl/tinker/: __init__.py  tinker_inference_service_client.py  tinker_service_holder.py
nexrl/train_service_backend/: __init__.py
nexrl/train_service_backend/api/: client.py  (+3 more)
nexrl/trainer/: __init__.py  base_trainer.py  remote_api_cross_entropy_trainer.py  remote_api_grpo_trainer.py  remote_api_opd_trainer.py  remote_api_trainer.py  self_hosted_grpo_trainer.py  self_hosted_opd_trainer.py  self_hosted_trainer.py  teacher_client.py
nexrl/utils/: compare_debug_dumps.py  config_utils.py  data_dumper.py  finetune_service_utils.py  git.py  init_utils.py  logging_utils.py  path_utils.py  torch_functional.py  tracking.py  url_utils.py  validate_config.py
nexrl/weaver/: __init__.py  weaver_inference_service_client.py  weaver_service_holder.py
nexrl/weight_sync/: __init__.py  weight_sync_controller.py
recipe/math/: README.md  common.yaml  self_hosted.yaml  tinker.yaml  weaver.yaml  weaver_full_ft.yaml
recipe/nexau_deepsearch/: README.md  common.yaml  self_hosted.env.sh  self_hosted.yaml  tinker.env.sh  tinker.yaml  weaver.env.sh  weaver.yaml
recipe/nexau_news/: README.md  common.yaml  self_hosted.env.sh  self_hosted.yaml  tinker.env.sh  tinker.yaml  weaver.env.sh  weaver.yaml
recipe/on_policy_distill/: design.md  opd_qwen2a5_1p5b_from_7b_sync_8192_adv0-100.yaml  opd_qwen2a5_3b_from_14b.yaml  self_hosted_opd_qwen2a5_1a5b_from_7b.yaml  weaver_opd.yaml
recipe/pig_latin/: README.md  common.yaml  self_hosted.yaml  tinker.yaml  weaver.yaml
recipe/single_turn_math_qwen2a5_7b/: single_turn_math_qwen2a5_7b.yaml  single_turn_math_qwen2a5_7b_sglang_backend.yaml  single_turn_math_qwen3_8b.yaml
tests/: .pylintrc  README.md  conftest.py
tests/lint/: __init__.py  check_license_header.py  fix_license_header.py
tests/unittests/: __init__.py  conftest.py  test_base_module.py  test_nexrl_types.py  test_train_batch_pool.py
(+106 files in other folders)
