# Copyright (c) Nex-AGI. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=61.0", "wheel", "cmake", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "NexRL"
version = "1.1.0"
description = "An ultra-loosely-coupled LLM post-training framework by Nex-AGI Team"
requires-python = ">=3.12"
dependencies = [
    "torch==2.7.1",
    "transformers==4.56.2",
    "tensordict==0.7.2",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "hydra-core==1.3.2",
    "pyyaml==6.0.2",
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",

    # Communication & Messaging
    "pyzmq==26.2.1",
    "requests==2.32.3",
    "httpx>=0.27.0",
    "h11>=0.13,<0.15",

    # Distributed
    "ray==2.48.0",
    "ray[default]==2.48.0",

    # Templates
    "jinja2==3.1.5",

    # Data Management
    "redis==6.0.0",
    "pandas>=2.3.1",

    # Weaver & Tinker Integration
    "nex-weaver>=1.1.0",
    "tinker",
    "tinker-cookbook @ git+https://github.com/thinking-machines-lab/tinker-cookbook.git",

    # Utilities
    "filelock==3.17.0",
    "psutil==6.1.1",
    "pydantic>=2.11.7",

    "sympy==1.13.3",
    "pylatexenc==2.10",

    "wandb==0.19.8",

    # Self-Hosted Training
    "accelerate==1.5.2",
    "pyudev==0.24.4",

    # APIs
    "openai==1.66.3",
    "python-dotenv>=1.1.0",
    "urllib3==2.0.7",

]
authors = [
    {name = "Nex-AGI Team"}
]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/nex-agi/NexRL"
"Bug Tracker" = "https://github.com/nex-agi/NexRL/issues"

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "mypy==1.16.0",
    "isort==6.0.0",
    "pylint==3.3.5",
    "pytest==9.0.2",
]

# NexAU
nexau = [
    "nexau @ git+https://github.com/nex-agi/NexAU.git",
]


# Experiment Tracking
advanced-tracking = [
    "mlflow>=2.0.0",
    "swanlab>=0.3.0",
]

# All optional dependencies
all = [
    "NexRL[dev,advanced-tracking,nexau]",
]

[project.scripts]
nexrl = "cli.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexrl*", "cli*"]

[tool.setuptools.package-data]
cli = [
    "setup/*.yaml",
    "self_hosted/templates/*.jinja",
    "training_service/templates/*.jinja",
]
nexrl = [
    "config/*.yaml",
    "config/**/*.yaml",
]

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
include = '(\.pyi?$)'
exclude = '''
(
      \.github
    | \.vscode
    | \.venv
    | \.cursor
)
'''
required_version = "25.1.0"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
exclude = ["tests/", "recipe/"]
